BasML and Predictor

--- a/NetworkTraffic/NetworkTraffic.csproj
+++ b/NetworkTraffic/NetworkTraffic.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.5.4" />
+    <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.4" />
   </ItemGroup>
 
 </Project>
